backtrack_v2, + Makefile Anpassungen, uint8_t Umstellung (bad_strnc*)

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -2,7 +2,7 @@
 % File Name     : Protokoll.tex
 % Purpose       :
 % Creation Date : 20-12-2013
-% Last Modified : Fri 10 Jan 2014 07:53:57 PM CET
+% Last Modified : Sat 11 Jan 2014 10:37:59 PM CET
 % Created By    :
 %
 \documentclass[a4paper,12pt]{article}
@@ -89,6 +89,7 @@ In Runde 15 wurde ein Schlüsselbyte bereits das zweite mal überschrieben.
 
 \subsection{Zufallszahlengenerator}
 
+Schlüsselstromgenerator
 Linearesrückkopplungsschieberegister
 
 Beschreibung
